--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
       <div class="project-gallery">
         <div class="project-card" data-aos="zoom-in">
-          <img src="projet1.jpeg" alt="Projet 1">
+          <img src="profil7.jpeg" alt="Projet 1">
           <div class="project-info">
             <h3>Creation des Sites WEb</h3>
             <p>Pour entreprises, artisyes, freelances, etc...</p>
@@ -120,7 +120,7 @@
         </div>
 
         <div class="project-card" data-aos="zoom-in" data-aos-delay="100">
-          <img src="projet3.jpeg" alt="Projet 2">
+          <img src="profil6.jpeg" alt="Projet 2">
           <div class="project-info">
             <h3>Maintenance des sites Web</h3>
             <p>Corrections des bugs, mises à jour, sauvegardes,</p>
@@ -129,7 +129,7 @@
         </div>
 
         <div class="project-card" data-aos="zoom-in" data-aos-delay="200">
-          <img src="projet2.jpeg" alt="Projet 3">
+          <img src="profil5.jpeg" alt="Projet 3">
           <div class="project-info">
             <h3>Creation d'applications mobiles Android/IOS</h3>
             <p>Apps de Gestion, Apps e-commerce, apps de Chat, etc...</p>
@@ -138,7 +138,7 @@
         </div>
 
           <div class="project-card" data-aos="zoom-in" data-aos-delay="200">
-          <img src="projet2.jpeg" alt="Projet 3">
+          <img src="profil4.jpeg" alt="Projet 3">
           <div class="project-info">
             <h3>Créaction de maquettes Interactives </h3>
             <p>Presentation de projet ou portfolio interactif, etc...</p>
@@ -163,10 +163,7 @@
           <div class="project-info">
             <h3>Application de chat</h3>
             <p>Application mobile de messagerie développée avec React Native + Firebase.</p>
-            <div class="project-links">
-              <a href="#">Code</a>
-              <a href="#">Démo</a>
-            </div>
+        
           </div>
         </div>
 
